# imputef

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: r.yml  rust.yml
R/: extendr-wrappers.R  imputef.R
man/: aldknni.Rd  mvi.Rd
res/: LINKIMPUTE_INPUT-maf0.1-missing_rate0.7-985085891-IMPUTED.tsv  LINKIMPUTE_INPUT-maf0.1-missing_rate0.7-985085891.tsv  LINKIMPUTE_INPUT-maf0.25-missing_rate0.8-468492512.tsv  LINKIMPUTE_INPUT-maf0.25-missing_rate0.8-55379007.tsv  LINKIMPUTE_INPUT-maf0.25-missing_rate0.9-103760824.tsv  LINKIMPUTE_INPUT-maf0.25-missing_rate0.9-419497407.tsv  bcftools.yml  perf.R  perf.md  perf.slurm  perf_cocksfoot.slurm  perf_functions.R  perf_grape.slurm  perf_lucerne.slurm  perf_misc.R  perf_misc.slurm  perf_plot.R  perf_soybean.slurm  rustenv.yml  ssv2vcf.R  summary_plot.R
res/bk_output/: grape-performance_assessment-maf_0.01-missing_rate_0.01.csv  grape-performance_assessment-maf_0.01-missing_rate_0.1.csv  grape-performance_assessment-maf_0.01-missing_rate_0.2.csv  grape-performance_assessment-maf_0.01-missing_rate_0.3.csv  (+56 more)
src/: Makevars  Makevars.win  aldknni.rs  entrypoint.c  filter_missing.rs  geno.rs  helpers.rs  main.rs  mvi.rs  phen.rs  structs_and_traits.rs  sync.rs  vcf.rs
src/rust/: Cargo.toml
src/rust/src/: aldknni.rs  filter_missing.rs  geno.rs  helpers.rs  lib.rs  mvi.rs  optim.rs  phen.rs  structs_and_traits.rs  sync.rs  vcf.rs
src/rust/tests/: test.txt  test.vcf
tests/: test.csv  test.ssv  test.sync  test.tsv  test_2.tsv  test_2.vcf  test_3.tsv  tests.R
