[package]
name = 'imputef'
version = '1.0.0'
edition = '2021'

[dependencies]
clap = { version="3.2.23", features=["derive"]}
ndarray = { version = "0.15.6", features = ["rayon"]}
ndarray-linalg = "0.16"
# ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] } 
# ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
statrs = "0.16.0"
rand = "0.8.5"
rayon = "1.7.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# bincode = "1.3.3"

[profile.dev]
overflow-checks = true
opt-level = 3

[profile.release]
opt-level = 3
