[package]
name = 'imputef'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'imputef'

[dependencies]
extendr-api = '*'
ndarray = { version = "0.15.6", features = ["rayon"]}
# ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }
statrs = "0.16.0"
rand = "0.8.5"
rayon = "1.7.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
